# fast_pyworld3

./: .gitignore  README.md  benchmark.py  main.py  pyproject.toml
src/fast_pyworld3/: __init__.py  core.py
src/fast_pyworld3/sectors/: __init__.py  agriculture.py  base.py  capital.py  pollution.py  population.py  resource.py
src/fast_pyworld3/utils/: __init__.py  delays.py  functions.py
tests/: test_basic.py
