[project]
name = "fast_pyworld3"
version = "1.0.0"
description = "This library solves the circular dependency problem of the world3 model updated in 2005."
requires-python = ">=3.13"

dependencies = ["numpy>=2.4.0", "scipy>=1.16.3", "matplotlib>=3.10.8"]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/fast_pyworld3"]


[project.optional-dependencies]
dev = ["pytest>=9.0.0", "basedpyright>=1.37.0", "ruff>=0.14.10"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
